--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-group = 'reinaldo'
+group = 'qa.reinaldo'
 version = '1.0-SNAPSHOT'
 
 repositories {
@@ -12,18 +12,22 @@ buildscript {
         maven { url 'https://plugins.gradle.org/m2/' }
     }
     dependencies {
+        // kotlin dependences
+        classpath "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.0"
         classpath group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: '1.5.0'
+        classpath group: 'org.jetbrains.kotlin', name: 'kotlin-test-junit5', version: '1.5.0'
+        classpath 'org.jetbrains.kotlin:kotlin-test:1.5.0'
 
+        // allure dependences
         classpath "io.qameta.allure:allure-gradle:2.8.1"
         classpath group: 'io.qameta.allure', name: 'allure-java-commons', version: '2.13.9'
-        classpath group: 'io.qameta.allure', name: 'allure-junit4', version: '2.13.9'
         classpath group: 'io.qameta.allure', name: 'allure-junit5', version: '2.13.9'
 
-        classpath group: 'org.jetbrains.kotlin', name: 'kotlin-test-junit5', version: '1.4.31'
-        classpath 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-        classpath 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
-        classpath group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.7.2'
+        classpath(platform("org.junit:junit-bom:5.7.0"))
+        classpath ('org.junit.jupiter:junit-jupiter-api:5.7.0')
+        classpath ('org.junit.jupiter:junit-jupiter-params:5.7.0')
+        classpath ('org.junit.jupiter:junit-jupiter-engine:5.7.0')
     }
 }
 
@@ -32,9 +36,18 @@ apply plugin: "org.jetbrains.kotlin.jvm"
 
 dependencies {
     implementation 'org.junit.jupiter:junit-jupiter:5.7.0'
-    implementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testImplementation 'org.jetbrains.kotlin:kotlin-test'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.0"
+    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-test-junit5', version: '1.5.0'
     testImplementation group: 'io.qameta.allure', name: 'allure-junit5', version: '2.13.8'
+    implementation group: 'io.qameta.allure', name: 'allure-java-commons', version: '2.13.9'
+    testImplementation group: 'org.jetbrains.kotlin', name: 'kotlin-test-junit5', version: '1.5.0'
+    // junit 5
+    testImplementation('org.assertj:assertj-core:3.12.2')
+    testImplementation(platform("org.junit:junit-bom:5.7.0"))
+    testImplementation ('org.junit.jupiter:junit-jupiter-api:5.7.0')
+    testCompile ('org.junit.jupiter:junit-jupiter-params:5.7.0')
+    testRuntime ('org.junit.jupiter:junit-jupiter-engine:5.7.0')
+    test.useJUnitPlatform()
 }
 
 test {
